--- a/Qmatrix Design/biblio.bib
+++ b/Qmatrix Design/biblio.bib
@@ -1,3 +1,4 @@
+
 @article{baker2009state,
   title={The state of educational data mining in 2009: A review and future visions},
   author={Baker, Ryan SJD and Yacef, Kalina},
@@ -6,6 +7,24 @@
   number={1},
   pages={3--17},
   year={2009}
+}
+
+@misc{doroudi2017misidentified,
+  title={The misidentified identifiability problem of bayesian knowledge tracing},
+  author={Doroudi, Shayan and Brunskill, Emma},
+  year={2017},
+  publisher={International Conference on Educational Data Mining, EDM2017}
+}
+
+@article{van2013properties,
+  title={Properties of the bayesian knowledge tracing model},
+  author={van De Sande, Brett},
+  journal={Journal of Educational Data Mining},
+  volume={5},
+  number={2},
+  pages={1--10},
+  year={2013},
+  publisher={International Educational Data Mining Society}
 }
 
 @inproceedings{beck2007identifiability,
