--- a/Qmatrix Design/biblio.bib
+++ b/Qmatrix Design/biblio.bib
@@ -712,3 +712,12 @@
   pages={551--555},
   year={2016}
 }
+
+@incollection{vie2017review,
+  title={A review of recent advances in adaptive assessment},
+  author={Vie, Jill-J{\^e}nn and Popineau, Fabrice and Bruillard, {\'E}ric and Bourda, Yolaine},
+  booktitle={Learning Analytics: Fundaments, Applications, and Trends},
+  pages={113--142},
+  year={2017},
+  publisher={Springer}
+}
